--- a/login.html
+++ b/login.html
@@ -77,12 +77,21 @@
         </ul>
       </div>
     </nav>
-    <section id="showcase">
-      <div class="container">
-        <h1 id="tell">제품의 마음을 들여다봅니다</h1>
-        <h2 id="abc">Design & Programming</h2>
-        <p id="same">Make New에서 더 나은 서비스를 제공해드립니다.</p>
-      </div>
+    <section>
+      <h1>로그인</h1>
+      ID<input
+        type="text"
+        name="id"
+        placeholder="아이디를 입력해주세요"
+      /><br />
+      PASSWORD<input
+        type="password"
+        name="password"
+        placeholder="비밀번호를 입력해주세요"
+      />
+      <p>
+        <input type="submit" name="login" value="로그인" />
+      </p>
     </section>
     <footer>
       <div class="footer-container">
