--- a/login.html
+++ b/login.html
@@ -76,23 +76,38 @@
           </li>
         </ul>
       </div>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+           
+            <a class="nav-link" href="{url "common:logout" %}">로그아웃</a>      
+        </li>
+  </ul>
     </nav>
-    <section>
-      <h1>로그인</h1>
-      ID<input
-        type="text"
-        name="id"
-        placeholder="아이디를 입력해주세요"
-      /><br />
-      PASSWORD<input
-        type="password"
-        name="password"
-        placeholder="비밀번호를 입력해주세요"
-      />
-      <p>
-        <input type="submit" name="login" value="로그인" />
-      </p>
-    </section>
+    <div class="container my-3">
+      <form method="post" action="{% url 'common:login' %}">
+        <div class="mb-3">
+          <label for="username">사용자ID</label>
+          <input
+            type="text"
+            class="form-control"
+            name="username"
+            id="username"
+            placeholder="아이디를 입력해주세요"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="password">비밀번호</label>
+          <input
+            type="password"
+            class="form-control"
+            name="password"
+            id="password"
+            placeholder="비밀번호를 입력해주세요"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">로그인</button>
+      </form>
+    </div>
     <footer>
       <div class="footer-container">
         <div class="quick-links">
