--- a/member.html
+++ b/member.html
@@ -125,7 +125,7 @@
       <input type="button" value="확인"/>
     </div>
       <p>
-      <input type="submit" name="login" value="가입하기" />
+      <input type="submit" name="login" value="가입하기" onclick="alert('가입이 불가능합니다')" />
     </p>
     <footer>
       <div class="footer-container">
